Small simplification big clarity 🙃

--- a/07-vampires-editor-but-jQuery.html
+++ b/07-vampires-editor-but-jQuery.html
@@ -51,7 +51,7 @@
           event.stopPropagation();
           openModalFor(element);
         });
-      return element[0];
+      return element;
     }
 
     function openModalFor(vampire) {
