--- a/00-vampires-1.html
+++ b/00-vampires-1.html
@@ -11,7 +11,7 @@
         align-items: flex-start;
         margin: 1rem;
         padding: 1rem;
-        background: #E85;
+        background: #5D3;
         border: 1px dashed #222;
         border-radius: 4px;
         box-shadow: 2px 2px 8px #222;
@@ -67,7 +67,7 @@
         </div>
       </div>
       <div>🧛‍♀️ <span class="vampire-name">Alphonso</span>
-        <div>🧛‍♀️ <span class="vampire-name">Bartholomew</span></div>
+        <div>🧛‍♀️ <span class="vampire-name" id="bart">Bartholomew</span></div>
       </div>
     </div>
   </body>
