--- a/04-vampires-clicks.html
+++ b/04-vampires-clicks.html
@@ -92,34 +92,21 @@
       ]
     };
 
-    function distanceFromRoot(node, distance=0) {
-      if (node.tagName !== 'DIV') return Infinity;
-      const name = node.querySelector('.vampire-name').innerText;
-      if (name === 'Root') return distance;
-      return distanceFromRoot(node.parentElement, distance+1);
-    }
-
-    function createVampire(name) {
-      const element = document.createElement('div')
-      const content = `🧛‍♀️ <span class='vampire-name'>${name}</span>`
-      element.innerHTML = content;
-      element.addEventListener('click', (event) => {
-        event.stopPropagation(); // Something weird happens if you don't stopPropagation 🤔
-        alert(`${name} is ${distanceFromRoot(element)} from the Root`);
-      });
-      return element;
-    }
-
     function buildVampireTree(node) {
-      const element = createVampire(node.name);
-      node.children?.forEach(child => {
-        element.appendChild(buildVampireTree(child));
+      const vampireNode = document.createElement('div');
+      vampireNode.innerHTML = `🧛‍♀️ <span class='vampire-name'>${node.name}`;
+      vampireNode.addEventListener('click', (event) => {
+        event.stopPropagation();
+        alert(node.name);
       });
-      return element;
+      node.children?.forEach(child => {
+        const childNode = buildVampireTree(child);
+        vampireNode.append(childNode);
+      });
+      return vampireNode;
     }
 
-    const vampireNodeTree = buildVampireTree(vampireTree);
-    document.querySelector('body').appendChild(vampireNodeTree);
+    document.body.append(buildVampireTree(vampireTree));
   </script>
 </body>
 </html>
